# prompt-vault

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
.claude/: settings.local.json
.claude/docs/adrs/: ADR-001.md
.specify/memory/: constitution.md
a6/4c54306905/: metadata.json
a6/4c54306905/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
backend/: .env.example  alembic.ini  conftest.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2026_02_16_0001-initial_prompts_and_versions.py  2026_02_16_0002-add_evaluations.py
backend/app/: main.py
backend/app/agents/: criteria.py  evaluator.py  provider.py
backend/app/api/: deps.py  evaluations.py  health.py  prompts.py
backend/app/core/: config.py  database.py  logging.py
backend/app/models/: enums.py  evaluation.py  prompt.py
backend/app/repositories/: evaluation_repo.py  prompt_repo.py
backend/app/schemas/: evaluation.py  prompt.py
backend/app/seed/: data.py
backend/app/services/: evaluation_service.py  prompt_service.py
db/init/: 01-create-test-db.sql
ef/47ffe1ffe8/: metadata.json
ef/47ffe1ffe8/0/: content_hash.txt  context.md  metadata.json  prompt.txt
frontend/: package.json
frontend/src/: main.tsx  router.tsx
frontend/src/hooks/: useEvaluations.ts  usePrompts.ts
frontend/src/pages/: CreatePromptPage.tsx  DashboardPage.tsx  EditPromptPage.tsx  PromptDetailPage.tsx  PromptsPage.tsx
frontend/src/services/: api.ts  (+2 more)
specs/001-prompt-repository-api/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+16 files in other folders)
